--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300;400;500;600;700&display=swap');
+@layer reset, base, tokens, recipes, utilities;
 html {
   margin: 0;
   padding: 0;
   background-color: #ece8e1;
   font-size: 16px;
+  font-family: 'Akshar', sans-serif;
 }
 body {
   margin: 0;
