--- a/index.css
+++ b/index.css
@@ -1,13 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300;400;500;600;700&display=swap');
-html {
+:root {
+  --txt-color: #464446;
+}
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   background-color: #ece8e1;
   font-size: 16px;
+  font-family: 'Akshar', sans-serif;
 }
-body {
-  margin: 0;
-  padding: 0;
+a {
+  color: var(--txt-color);
+  text-decoration: none;
 }
