--- a/src/components/MyProjects/splideSyles.css
+++ b/src/components/MyProjects/splideSyles.css
@@ -1,12 +1,15 @@
 .custom__arrow {
-    border-radius: 0;
-    background-color: transparent;
-    padding: 0;
-    width: 50px;
-    height: 50px;
+  border-radius: 0;
+  background-color: transparent;
+  padding: 0;
+  width: 50px;
+  height: 50px;
 }
 .custom__arrow > svg {
-    height: 100%;
-    width: 100%;
-    fill: #ECE8E1;
+  height: 100%;
+  width: 100%;
+  fill: #ece8e1;
+}
+.splide__progress__bar {
+  background-color: red;
 }
